# billsons-bookbinder

./: .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  application.py  version.py
app/core/: __init__.py  booklet_imposer.py  logical_page_stream.py  signature_planner.py
app/models/: __init__.py  book_project.py  imposition.py  logical_page.py  pdf_export.py  pdf_preview.py  signature_plan.py
app/services/: __init__.py  pdf_document_service.py  pdf_preview_renderer.py  signature_pdf_exporter.py
app/ui/: __init__.py  main_window.py
tests/: test_book_project.py  test_booklet_imposer.py  test_logical_page_stream.py  test_pdf_preview_renderer.py  test_signature_pdf_exporter.py  test_signature_planner.py
