[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billsons-bookbinder"
version = "0.1.0"
description = "Prepare PDFs for signature printing and bookbinding"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Dylan Billson" }
]
dependencies = [
    "PySide6>=6.10,<7",
    "PyMuPDF>=1.26,<2",
]

[project.optional-dependencies]
development = [
    "pytest>=9,<10",
    "ruff>=0.14,<1",
    "pyinstaller>=6.17,<7",
]

[project.gui-scripts]
billsons-bookbinder = "app.application:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]